--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
 <li>jogar volei</li>
 <li>andar de motorizada</li>
 </ul>
+<h3>meus melhores amigos</h3>
+<ul>
+<li>Victor</li>
+<li>Yuri</li>
+<li>Eric</li>
+</ul>
 </body>
 </html>
